# grocery_price_scrape

backend/: Cargo.toml
backend/bindings/: ComparePrice.ts  DataForDay.ts  Item.ts  ParsedItem.ts  PriceUnit.ts  ProductType.ts  SoldInUnit.ts  StoreData.ts
backend/src/: main.rs  parse.rs  types.rs
frontend/: package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.svelte  global.scss  main.ts  utilities.ts
src/: main.py
