[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
ts-rs = { version = "6.1", features = ["chrono-impl"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = { version = "0.16.2", features = ["rayon"] }
serde-pickle = "1.1"
flate2 = "1.0"
serde_path_to_error = "0.1"
rayon = "1.5"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
fuse-rust = { version = "0.3" }
nom = "7"